# snafu-upgrade-assistant

./: Cargo.toml  README.md
src/: main.rs
upgrade-examples/: Cargo.toml  test.sh
upgrade-examples/test-add-suffix/: Cargo.toml
upgrade-examples/test-add-suffix/src/: main.rs  main.rs.expected
upgrade-examples/test-attribute-with-equal-syntax/: Cargo.toml
upgrade-examples/test-attribute-with-equal-syntax/src/: main.rs  main.rs.expected
upgrade-examples/test-with-context-arg/: Cargo.toml
upgrade-examples/test-with-context-arg/src/: main.rs  main.rs.expected
